# mod_audio_stream

./: .clang-format  .gitignore  API.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  test_adaptive_buffer.cpp  test_websocket_server.py
conf/: audio_stream.conf.xml.sample
docker/: .env  .env.example  Dockerfile  build.sh  docker-compose.test.yml  docker-compose.yml  test_websocket_client.py  test_websocket_server.py
docker/config/: freeswitch.xml
docker/config/autoload_configs/: audio_stream.conf.xml  event_socket.conf.xml
src/: adaptive_buffer.cpp  adaptive_buffer.hpp  adaptive_buffer_wrapper.cpp  adaptive_buffer_wrapper.h  advanced_api.h  audio_pipe.cpp  audio_pipe.hpp  base64.hpp  connection_manager.cpp  connection_manager.hpp  lws_glue.cpp  lws_glue.h  mod_audio_stream.c  mod_audio_stream.h  openai_adapter.c  openai_adapter.h  stream_utils.cpp  stream_utils.hpp  voipbit_stubs.c
